More CSS to fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 .fb-like {
     position: relative;
-    top: 15px; // vertically center FB like/share
+    top: -5px; // vertically center FB like/share
 }
 
 /* This gets Facebook to fall into place */
